--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "description": "frontend for sdcaulley",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
