--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive --exit",
+    "coverage": "nyc npm run test",
     "start": "nodemon server.js"
   },
   "author": "sdcaulley",
@@ -26,6 +27,7 @@
     "eslint": "^5.14.1",
     "mocha": "^6.1.4",
     "node-fetch": "^2.3.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "nyc": "^14.1.1"
   }
 }
