--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "frontend for sdcaulley",
   "private": true,
+  "jest": {
+      "coverageDirectory": "./coverage",
+      "collectCoverage": true
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -21,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test && codecov",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
