--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,9 @@ before_install:
   - sudo service mongod start
 
 install:
-  - npm install -g codecov
   - cd $TRAVIS_BUILD_DIR/frontend && npm install
   - cd $TRAVIS_BUILD_DIR/backend && npm install
 
 script:
-  - cd $TRAVIS_BUILD_DIR/backend && npm coverage
+  - cd $TRAVIS_BUILD_DIR/backend && npm test
   - cd $TRAVIS_BUILD_DIR/frontend && npm test
