--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive --exit",
-    "coverage": "nyc npm run test",
     "start": "nodemon server.js"
   },
   "author": "sdcaulley",
@@ -27,7 +26,6 @@
     "eslint": "^5.14.1",
     "mocha": "^6.1.4",
     "node-fetch": "^2.3.0",
-    "nodemon": "^1.18.10",
-    "nyc": "^14.1.1"
+    "nodemon": "^1.18.10"
   }
 }
