--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -31,6 +31,7 @@
             "error",
             "always"
         ],
-        "prefer-spread": "error"
+        "prefer-spread": "error",
+        "prefer-template": "error"
     }
 }
