--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive --exit",
-    "start": "nodemon server.js"
+    "start": "nodemon -r dotenv/config server.js"
   },
   "author": "sdcaulley",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-es6-template-engine": "^2.1.9",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.16",
     "passport": "^0.4.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "dotenv": "^8.0.0",
     "eslint": "^5.14.1",
     "mocha": "^6.1.4",
     "node-fetch": "^2.3.0",
