converted basic backend to koa

--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,7 +1,6 @@
-
 {
     "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 2019,
         "sourceType": "module",
         "ecmaFeatures": {
             "modules": true,
@@ -14,14 +13,20 @@
         "mocha": true,
         "es6": true,
         "mongo": true,
-        "commonjs": true
+        "commonjs": true,
+        "jquery": true
     },
     "extends": "eslint:recommended",
     "rules": {
         "no-console": "off",
         "indent": [
             "error",
-            4
+            2,
+            { "SwitchCase": 1 }
+        ],
+        "linebreak-style": [
+            "error",
+            "unix"
         ],
         "quotes": [
             "error",
