--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "mongoose": "^5.9.7",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "sinon": "^9.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
