--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "mongoose": "^5.9.7",
-    "mongoose-unique-validator": "^2.0.3",
-    "sinon": "^9.0.2"
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -30,6 +29,7 @@
     "eslint-plugin-node": "^11.1.0",
     "koa-logger": "^3.2.1",
     "mocha": "^6.2.3",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sinon": "^9.0.2"
   }
 }
