--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,20 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "frontend for sdcaulley",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "es-dev-server --app-index index.html --node-resolve --watch --open"
   },
   "author": "sdcaulley",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "devDependencies": {
+    "es-dev-server": "^1.56.0",
+    "happiness": "^10.0.2"
+  },
+  "dependencies": {
+    "lit-element": "^2.3.1"
+  },
+	"standard": {
+		"globals": ["customElements"]
+	}
 }
