--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,10 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-node": "^11.1.0",
+    "happiness": "^10.0.2",
     "koa-logger": "^3.2.1",
     "mocha": "^6.2.3",
+    "mongodb": "^3.5.9",
     "nodemon": "^2.0.2",
     "sinon": "^9.0.2"
   }
