--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,15 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "mongoose": "^5.9.7",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-node": "^11.1.0",
     "happiness": "^10.0.2",
     "koa-logger": "^3.2.1",
     "mocha": "^6.2.3",
