--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@vaadin/router": "^1.7.2",
-    "lit-element": "^2.3.1"
+    "lit-element": "^2.3.1",
+    "normalize.css": "^8.0.1"
   },
   "standard": {
     "globals": [
