building out state management

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
   "standard": {
     "globals": [
       "customElements",
-      "fetch"
+      "fetch",
+			"URL",
+			"Proxy"
     ]
-  }
+  },
+	"proxy": "localhost:5000"
 }
