--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
   "author": "sdcaulley",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "es-dev-server": "^1.57.3",
     "happiness": "^10.0.2"
   },
   "dependencies": {
     "@vaadin/router": "^1.7.2",
-    "lit-element": "^2.3.1",
+    "lit-element": "^2.4.0",
     "normalize.css": "^8.0.1"
   },
   "standard": {
