--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "happiness": "^10.0.2"
   },
   "dependencies": {
-    "@danielturner/lit-state": "^1.0.1",
+    "@adobe/lit-mobx": "^1.0.0",
     "@vaadin/router": "^1.7.2",
     "lit-element": "^2.4.0",
+    "mobx": "^5.15.6",
     "normalize.css": "^8.0.1"
   },
   "standard": {
