--- a/backend/package.json
+++ b/backend/package.json
@@ -28,11 +28,11 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.7.0",
     "eslint-plugin-node": "^11.1.0",
-    "happiness": "^10.0.2",
     "koa-logger": "^3.2.1",
     "mocha": "^6.2.3",
     "mongodb": "^3.6.0",
     "nodemon": "^2.0.4",
-    "sinon": "^9.0.3"
+    "sinon": "^9.0.3",
+    "standard": "^14.3.4"
   }
 }
