--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "es-dev-server": "^1.57.3",
-    "happiness": "^10.0.2"
+    "standard": "^14.3.4"
   },
   "dependencies": {
     "@adobe/lit-mobx": "^1.0.0",
